Ignore thread does nothing in a search folder.
Categories
(Thunderbird :: Folder and Message Lists, defect)
Tracking
(thunderbird_esr115 wontfix, thunderbird124 wontfix)
People
(Reporter: mozilla, Assigned: welpy-cw)
References
(Regression)
Details
(Keywords: regression)
Attachments
(2 files)
Steps to reproduce:
Right click on a threaded message, click Ignore thread
Actual results:
Nothing.
Expected results:
Thread should have been ignored, irritating status bar confirming this should appear at bottom of mailbox.
Application Basics
Name: Thunderbird
Version: 115.3.1
Build ID: 20230928194049
Distribution ID:
Update Channel: release
User Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:115.0) Gecko/20100101 Thunderbird/115.3.1
OS: Windows_NT 10.0 19045
OS Theme:
Launcher Process: Enabled
Multiprocess Windows: 0/0
Fission Windows: 0/0
Enabled by default
Remote Processes: 2
Enterprise Policies: Inactive
Google Location Service Key: Missing
Google Safebrowsing Key: Missing
Mozilla Location Service Key: Missing
Safe Mode: false
Memory Size (RAM): 31.9 GB
Disk Space Available: 597 GB
Assignee | ||
Comment 1•1 year ago
|
||
I can confirm this, most likely regressed by bug 1803705.
Assignee | ||
Comment 2•1 year ago
|
||
While this is a regression regarding single-folder search views (quick filter or saved search on one real folder), ignoring threads in synthetic or multi-folder search views didn't work before and would be quite hard to implement at the moment. I suggest disabling the commands in this case for the time being (maybe bug 1572000 will make a difference sometime), as well as fixing this for single folders.
Assignee | ||
Comment 3•1 year ago
|
||
- Fix "Ignore thread" in quick filter and single-folder saved searches by accessing the
underlying real folder. - Enable the possibility to view ignored threads for threaded single-folder searches.
Updated•1 year ago
|
Assignee | ||
Comment 4•1 year ago
|
||
I disagree. It has worked just fine for years. the thread that needs to be ignored doesn't itself spam multiple folders. All that's required is to identify which folder the message is in and apply it there. This has worked in every version of TBird I've used before 115, starting with v2.0.0.9.
Assignee | ||
Comment 6•1 year ago
|
||
(In reply to mozilla from comment #5)
I disagree. It has worked just fine for years. the thread that needs to be ignored doesn't itself spam multiple folders. All that's required is to identify which folder the message is in and apply it there. This has worked in every version of TBird I've used before 115, starting with v2.0.0.9.
What was the last version you used before 115? I just tested this in 102.15.1, ignoring a thread in a cross-folder view has no effect on the underlying folder. Threads ignored in the underlying folder will still show up in the cross-folder view.
Assignee | ||
Updated•1 year ago
|
Assignee | ||
Updated•1 year ago
|
I've always kept Tbird up to date, but I may not have made use of the feature in the most recent version as it only gets used on occasion. I have a single search folder that gives me unread and tagged mail across 10 active email accounts. Several of those subscribe to various mailing lists. When a thread veers off-topic, I have been in the habit of using the ignore thread feature from that search folder and it has worked just fine every time.
Thus it is possible that the last time I used it was pre-102.
I'm sorry that I'm not more familiar with the data structures involved. It seems odd to me that sending this command to a message in a search folder is that much more complicated than locating the message's folder and doing the same thing. In any case, it's more of an inconvenience than a major issue. I can live with it going away, although I will mutter and grumble every time I find it missing. :)
Assignee | ||
Updated•1 year ago
|
Pushed by mkmelin@iki.fi:
https://hg.mozilla.org/comm-central/rev/2f215a3f359c
Fix ignoring threads for single-folder search views. r=mkmelin
Assignee | ||
Updated•1 year ago
|
Comment 10•1 year ago
|
||
Pushed by mkmelin@iki.fi:
https://hg.mozilla.org/comm-central/rev/0ddb51bc2761
Disable non-functional "Ignore thread" command for multi-folder/synthetic search views. r=mkmelin
Assignee | ||
Updated•10 months ago
|
Description
•