Bug 1861200 - Fix ignoring threads for single-folder search views. r=mkmelin

- Fix "Ignore thread" in quick filter and single-folder saved searches by accessing the
underlying real folder.
- Enable the possibility to view ignored threads for threaded single-folder searches.

Differential Revision: https://phabricator.services.mozilla.com/D202106

--HG--
extra : amend_source : bfd10a969669b92bdcff6a72e56669c471388349